// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListDataView should be fetch data by \`infinite\` 1`] = `
Object {
  "__META__": Object {
    "MODEL_PERSISTED_FIELD": false,
    "fields": Array [
      "name",
      "label",
      "active",
      "dataType",
      "canAsDimension",
      "ability",
    ],
    "id": -52,
    "refs": Object {},
    "type": "flow.PropertySet",
  },
  "ability": undefined,
  "active": true,
  "canAsDimension": undefined,
  "dataType": Object {
    "elemType": Object {
      "fields": Array [
        Object {
          "active": true,
          "canAsDimension": false,
          "dataType": Object {
            "type": "dynamic",
          },
          "label": "业务对象明细",
          "name": "dataLinkForm",
        },
        Object {
          "active": true,
          "canAsDimension": false,
          "dataType": Object {
            "entity": "datalink.DataLinkTemplate",
            "type": "ref",
          },
          "label": "业务对象模板",
          "name": "dataLinkTemplateId",
        },
        Object {
          "active": true,
          "canAsDimension": true,
          "dataType": Object {
            "entity": "system_支付计划",
            "type": "ref",
          },
          "label": " 业务对象实例",
          "name": "dataLinkId",
        },
      ],
      "type": "complex",
    },
    "type": "list",
  },
  "label": "支付计划",
  "name": "payPlan",
}
`;

exports[`ListDataView should be fetch data by \`page\` 1`] = `
Array [
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "ability",
        "dataType",
      ],
      "id": -1,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": "pay",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "type": "boolean",
    },
    "label": "按金额支付",
    "name": "payPlanMode",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "dataType",
        "canAsDimension",
        "ability",
      ],
      "id": -2,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": undefined,
    "dataType": Object {
      "elemType": Object {
        "fields": Array [
          Object {
            "active": true,
            "canAsDimension": false,
            "dataType": Object {
              "type": "dynamic",
            },
            "label": "业务对象明细",
            "name": "dataLinkForm",
          },
          Object {
            "active": true,
            "canAsDimension": false,
            "dataType": Object {
              "entity": "datalink.DataLinkTemplate",
              "type": "ref",
            },
            "label": "业务对象模板",
            "name": "dataLinkTemplateId",
          },
          Object {
            "active": true,
            "canAsDimension": true,
            "dataType": Object {
              "entity": "system_支付计划",
              "type": "ref",
            },
            "label": " 业务对象实例",
            "name": "dataLinkId",
          },
        ],
        "type": "complex",
      },
      "type": "list",
    },
    "label": "支付计划",
    "name": "payPlan",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "ability",
        "dataType",
      ],
      "id": -3,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": "dataLink",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "type": "dynamic",
    },
    "label": "业务对象明细",
    "name": "dataLinkForm",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "ability",
        "dataType",
      ],
      "id": -4,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": "dataLink",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "entity": "datalink.DataLinkTemplate",
      "type": "ref",
    },
    "label": "业务对象模板",
    "name": "dataLinkTemplateId",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "ability",
        "dataType",
      ],
      "id": -5,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": "dataLink",
    "active": true,
    "canAsDimension": true,
    "dataType": Object {
      "entity": "datalink.DataLinkEntity",
      "type": "ref",
    },
    "label": "业务对象实例",
    "name": "dataLinkId",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "ability",
        "dataType",
      ],
      "id": -6,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": "print",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "scale": 0,
      "type": "number",
      "unit": "次",
    },
    "label": "打印次数",
    "name": "printCount",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "ability",
        "dataType",
      ],
      "id": -7,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": "print",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "type": "text",
    },
    "label": "打印状态",
    "name": "printState",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "ability",
        "dataType",
      ],
      "id": -8,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": "print",
    "active": true,
    "canAsDimension": true,
    "dataType": Object {
      "entity": "organization.Staff",
      "type": "ref",
    },
    "label": "最后打印人",
    "name": "lastPrinter",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "ability",
        "dataType",
      ],
      "id": -9,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": "print",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "type": "date",
    },
    "label": "最后打印时间",
    "name": "lastPrintTime",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "ability",
        "dataType",
      ],
      "id": -10,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": "",
    "active": true,
    "canAsDimension": true,
    "dataType": Object {
      "entity": "basedata.Dimension.法人实体",
      "type": "ref",
    },
    "label": "法人实体",
    "name": "法人实体",
  },
]
`;

exports[`ListDataView should be fetch data by \`page\` 2`] = `
Array [
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "ability",
        "dataType",
      ],
      "id": -11,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": "requisition",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "elemType": Object {
        "entity": "organization.Staff",
        "type": "ref",
      },
      "type": "list",
    },
    "label": "出行人",
    "name": "travelers",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "ability",
        "dataType",
      ],
      "id": -12,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": "feeDetail",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "type": "invoice",
    },
    "label": "发票",
    "name": "invoiceForm",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "ability",
        "dataType",
      ],
      "id": -13,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": "requisition",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "entity": "requisition.RequisitionInfo",
      "type": "ref",
    },
    "label": "补充申请",
    "name": "linkRequisitionInfo",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "dataType",
        "ability",
      ],
      "id": -14,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "entity": "basedata.Enum.InvoiceType",
      "type": "ref",
    },
    "label": "发票类型",
    "name": "invoiceType",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "ability",
        "dataType",
      ],
      "id": -15,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": "",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "type": "money",
    },
    "label": "不计税金额",
    "name": "noTaxAmount",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "ability",
        "dataType",
      ],
      "id": -16,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": "",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "type": "money",
    },
    "label": "税额",
    "name": "taxAmount",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "ability",
        "dataType",
      ],
      "id": -17,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": "",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "scale": 2,
      "type": "number",
      "unit": "%",
    },
    "label": "税率",
    "name": "taxRate",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "ability",
        "dataType",
      ],
      "id": -18,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": "permit",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "type": "permitOrder",
    },
    "label": "订单详情",
    "name": "order",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "ability",
        "dataType",
      ],
      "id": -19,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": "trip",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "type": "text",
    },
    "label": "行程明细ID",
    "name": "tripId",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "ability",
        "dataType",
      ],
      "id": -20,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": "trip",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "type": "date",
    },
    "label": "行程日期",
    "name": "tripDate",
  },
]
`;

exports[`ListDataView should be fetch data by \`page\` 3`] = `
Array [
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "dataType",
        "ability",
      ],
      "id": -21,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "entity": "datalink.DataLinkEntity.c61e09f00eb127406400",
      "type": "ref",
    },
    "label": "实体galo",
    "name": "u_实体galo",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "dataType",
        "ability",
      ],
      "id": -22,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": true,
    "dataType": Object {
      "entity": "basedata.Dimension.汉字nwnvy1xz",
      "type": "ref",
    },
    "label": "自hvk8l",
    "name": "u_自hvk8l",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "dataType",
        "ability",
      ],
      "id": -23,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": true,
    "dataType": Object {
      "entity": "basedata.Dimension.项目",
      "type": "ref",
    },
    "label": "项目cnyk",
    "name": "u_项目cnyk",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "dataType",
        "ability",
      ],
      "id": -24,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "entity": "datalink.DataLinkEntity.c61909fcb981f9c21800",
      "type": "ref",
    },
    "label": "普通赋值",
    "name": "u_普通赋值",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "dataType",
        "canAsDimension",
        "ability",
      ],
      "id": -25,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": undefined,
    "dataType": Object {
      "type": "date",
    },
    "label": "日期字段",
    "name": "u_日期字段",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "dataType",
        "ability",
      ],
      "id": -26,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": true,
    "dataType": Object {
      "entity": "organization.Staff",
      "type": "ref",
    },
    "label": "新人1118",
    "name": "u_新人1118",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "dataType",
        "ability",
      ],
      "id": -27,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "entity": "datalink.DataLinkEntity.87bf0a116b2443044c00",
      "type": "ref",
    },
    "label": "全",
    "name": "u_全",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "dataType",
        "canAsDimension",
        "ability",
      ],
      "id": -28,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": undefined,
    "dataType": Object {
      "type": "money",
    },
    "label": "金额字段",
    "name": "u_金额字段",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "dataType",
        "canAsDimension",
        "ability",
      ],
      "id": -29,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": undefined,
    "dataType": Object {
      "type": "money",
    },
    "label": "金额字段2",
    "name": "u_金额字段2",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "dataType",
        "canAsDimension",
        "ability",
      ],
      "id": -30,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": undefined,
    "dataType": Object {
      "type": "text",
    },
    "label": "文本字段",
    "name": "u_文本字段",
  },
]
`;

exports[`ListDataView should be fetch data by \`page\` 4`] = `
Array [
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "dataType",
        "canAsDimension",
        "ability",
      ],
      "id": -31,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": undefined,
    "dataType": Object {
      "elemType": Object {
        "fields": Array [
          Object {
            "active": true,
            "canAsDimension": false,
            "dataType": Object {
              "type": "dynamic",
            },
            "label": "业务对象明细",
            "name": "dataLinkForm",
          },
          Object {
            "active": true,
            "canAsDimension": false,
            "dataType": Object {
              "entity": "datalink.DataLinkTemplate",
              "type": "ref",
            },
            "label": "业务对象模板",
            "name": "dataLinkTemplateId",
          },
          Object {
            "active": true,
            "canAsDimension": true,
            "dataType": Object {
              "entity": "datalink.DataLinkEntity.f87b09df02bc37050400",
              "type": "ref",
            },
            "label": " 业务对象实例",
            "name": "dataLinkId",
          },
        ],
        "type": "complex",
      },
      "type": "list",
    },
    "label": "S7小白菜改",
    "name": "u_S7小白菜改",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "dataType",
        "canAsDimension",
        "ability",
      ],
      "id": -32,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": undefined,
    "dataType": Object {
      "elemType": Object {
        "fields": Array [
          Object {
            "active": true,
            "canAsDimension": false,
            "dataType": Object {
              "type": "dynamic",
            },
            "label": "业务对象明细",
            "name": "dataLinkForm",
          },
          Object {
            "active": true,
            "canAsDimension": false,
            "dataType": Object {
              "entity": "datalink.DataLinkTemplate",
              "type": "ref",
            },
            "label": "业务对象模板",
            "name": "dataLinkTemplateId",
          },
          Object {
            "active": true,
            "canAsDimension": true,
            "dataType": Object {
              "entity": "datalink.DataLinkEntity.f87b09df02bc37050400",
              "type": "ref",
            },
            "label": " 业务对象实例",
            "name": "dataLinkId",
          },
        ],
        "type": "complex",
      },
      "type": "list",
    },
    "label": "S7小白菜写",
    "name": "u_S7小白菜写",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "dataType",
        "ability",
      ],
      "id": -33,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "entity": "datalink.DataLinkEntity.ae2109df02bc37052800",
      "type": "ref",
    },
    "label": "S7白菜读取",
    "name": "u_S7白菜读取",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "dataType",
        "canAsDimension",
        "ability",
      ],
      "id": -34,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": undefined,
    "dataType": Object {
      "elemType": Object {
        "fields": Array [
          Object {
            "active": true,
            "canAsDimension": false,
            "dataType": Object {
              "type": "dynamic",
            },
            "label": "业务对象明细",
            "name": "dataLinkForm",
          },
          Object {
            "active": true,
            "canAsDimension": false,
            "dataType": Object {
              "entity": "datalink.DataLinkTemplate",
              "type": "ref",
            },
            "label": "业务对象模板",
            "name": "dataLinkTemplateId",
          },
          Object {
            "active": true,
            "canAsDimension": true,
            "dataType": Object {
              "entity": "datalink.DataLinkEntity.ae2109df02bc37052800",
              "type": "ref",
            },
            "label": " 业务对象实例",
            "name": "dataLinkId",
          },
        ],
        "type": "complex",
      },
      "type": "list",
    },
    "label": "S7白菜写入",
    "name": "u_S7白菜写入",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "dataType",
        "canAsDimension",
        "ability",
      ],
      "id": -35,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": undefined,
    "dataType": Object {
      "elemType": Object {
        "fields": Array [
          Object {
            "active": true,
            "canAsDimension": false,
            "dataType": Object {
              "type": "dynamic",
            },
            "label": "业务对象明细",
            "name": "dataLinkForm",
          },
          Object {
            "active": true,
            "canAsDimension": false,
            "dataType": Object {
              "entity": "datalink.DataLinkTemplate",
              "type": "ref",
            },
            "label": "业务对象模板",
            "name": "dataLinkTemplateId",
          },
          Object {
            "active": true,
            "canAsDimension": true,
            "dataType": Object {
              "entity": "datalink.DataLinkEntity.ae2109df02bc37052800",
              "type": "ref",
            },
            "label": " 业务对象实例",
            "name": "dataLinkId",
          },
        ],
        "type": "complex",
      },
      "type": "list",
    },
    "label": "S7白菜改",
    "name": "u_S7白菜改",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "dataType",
        "canAsDimension",
        "ability",
      ],
      "id": -36,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": undefined,
    "dataType": Object {
      "elemType": Object {
        "entity": "organization.Staff",
        "type": "ref",
      },
      "type": "list",
    },
    "label": "多选员工",
    "name": "u_多选员工",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "dataType",
        "canAsDimension",
        "ability",
      ],
      "id": -37,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": undefined,
    "dataType": Object {
      "elemType": Object {
        "entity": "organization.Staff",
        "type": "ref",
      },
      "type": "list",
    },
    "label": "员工多选",
    "name": "u_员工多选",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "dataType",
        "canAsDimension",
        "ability",
      ],
      "id": -38,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": undefined,
    "dataType": Object {
      "elemType": Object {
        "entity": "organization.Staff",
        "type": "ref",
      },
      "type": "list",
    },
    "label": "员工多",
    "name": "u_员工多",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "dataType",
        "ability",
      ],
      "id": -39,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "entity": "datalink.DataLinkEntity.d8a009f00eb127409800",
      "type": "ref",
    },
    "label": "实体9lgt",
    "name": "u_实体9lgt",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "dataType",
        "ability",
      ],
      "id": -40,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "entity": "datalink.DataLinkEntity.d8a009f00eb127409800",
      "type": "ref",
    },
    "label": "测试d7tz",
    "name": "u_测试d7tz",
  },
]
`;

exports[`ListDataView should be fetch data by \`page\` 5`] = `
Array [
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "ability",
        "dataType",
      ],
      "id": -41,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": "pay",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "type": "boolean",
    },
    "label": "按金额支付",
    "name": "payPlanMode",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "dataType",
        "canAsDimension",
        "ability",
      ],
      "id": -42,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": undefined,
    "dataType": Object {
      "elemType": Object {
        "fields": Array [
          Object {
            "active": true,
            "canAsDimension": false,
            "dataType": Object {
              "type": "dynamic",
            },
            "label": "业务对象明细",
            "name": "dataLinkForm",
          },
          Object {
            "active": true,
            "canAsDimension": false,
            "dataType": Object {
              "entity": "datalink.DataLinkTemplate",
              "type": "ref",
            },
            "label": "业务对象模板",
            "name": "dataLinkTemplateId",
          },
          Object {
            "active": true,
            "canAsDimension": true,
            "dataType": Object {
              "entity": "system_支付计划",
              "type": "ref",
            },
            "label": " 业务对象实例",
            "name": "dataLinkId",
          },
        ],
        "type": "complex",
      },
      "type": "list",
    },
    "label": "支付计划",
    "name": "payPlan",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "ability",
        "dataType",
      ],
      "id": -43,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": "dataLink",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "type": "dynamic",
    },
    "label": "业务对象明细",
    "name": "dataLinkForm",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "ability",
        "dataType",
      ],
      "id": -44,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": "dataLink",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "entity": "datalink.DataLinkTemplate",
      "type": "ref",
    },
    "label": "业务对象模板",
    "name": "dataLinkTemplateId",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "ability",
        "dataType",
      ],
      "id": -45,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": "dataLink",
    "active": true,
    "canAsDimension": true,
    "dataType": Object {
      "entity": "datalink.DataLinkEntity",
      "type": "ref",
    },
    "label": "业务对象实例",
    "name": "dataLinkId",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "ability",
        "dataType",
      ],
      "id": -46,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": "print",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "scale": 0,
      "type": "number",
      "unit": "次",
    },
    "label": "打印次数",
    "name": "printCount",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "ability",
        "dataType",
      ],
      "id": -47,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": "print",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "type": "text",
    },
    "label": "打印状态",
    "name": "printState",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "ability",
        "dataType",
      ],
      "id": -48,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": "print",
    "active": true,
    "canAsDimension": true,
    "dataType": Object {
      "entity": "organization.Staff",
      "type": "ref",
    },
    "label": "最后打印人",
    "name": "lastPrinter",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "ability",
        "dataType",
      ],
      "id": -49,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": "print",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "type": "date",
    },
    "label": "最后打印时间",
    "name": "lastPrintTime",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "fields": Array [
        "name",
        "label",
        "active",
        "canAsDimension",
        "ability",
        "dataType",
      ],
      "id": -50,
      "refs": Object {},
      "type": "flow.PropertySet",
    },
    "ability": "",
    "active": true,
    "canAsDimension": true,
    "dataType": Object {
      "entity": "basedata.Dimension.法人实体",
      "type": "ref",
    },
    "label": "法人实体",
    "name": "法人实体",
  },
]
`;
